env/preprod/frontend_ingress_sikademo_com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-sikademo-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - counter-preprod.openshift.sikademo.com
      secretName: counter-preprod.openshift.sikademo.com-tls
  rules:
    - host: counter-preprod.openshift.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
